--- a/src/pages/Gallery.css
+++ b/src/pages/Gallery.css
@@ -3,8 +3,8 @@
   padding: 100px 0 80px;
   text-align: center;
   color: var(--text-light);
-  width: 100vw;
-  margin-left: calc(-50vw + 50%);
+  width: 100%;
+  
 }
 
 .gallery-section {
