--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -5,8 +5,8 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  width: 100vw;
-  margin-left: calc(-50vw + 50%);
+  width: 100%;
+  
 }
 
 .hero-video {
